# ctrlmarket

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
database/: __init__.py  connection.py  ctrlmarket.db  queries.py  schema.sql  seed_data.sql
models/: __init__.py
tests/: conftest.py
tests/test_database/: test_connection.py  test_constraints.py  test_queries.py
tests/test_models/: test_validation.py
tests/test_tui/: conftest.py  test_app.py  test_dashboard.py  test_login.py  test_navigation.py  test_profile.py  test_screens.py  test_signup.py  test_workspace.py
tui/: app.py  dialogs.py
tui/css/: main.tcss
tui/screens/: __init__.py  dashboard.py  login.py  order_new.py  orders.py  product_edit.py  product_new.py  products.py  profile.py  service_new.py  services.py  signup.py  user_new.py  users.py  workspace.py
